2008-07-17  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa-key-list-mode): Use run-mode-hooks.
	(epa-key-mode): Ditto.
	(epa-info-mode): Ditto.

2008-07-17  Glenn Morris  <rgm@gnu.org>

	* term/ns-win.el (ns-handle-switch): Simplify.  Handle the numeric case.
	(ns-handle-numeric-switch): Just call ns-handle-switch.
	(ns-handle-name-switch, ns-handle-nxopen, ns-handle-nxopentemp)
	(ns-handle-args): Simplify using `pop'.
	(ns-display-name): Define (used in frame.el).
	(menu-bar-select-frame): Add (ignored) arg to more closely match the
	original definition.
	(ns-perform-service): Declare.
	(ns-save-preferences): Use fewer `let's.

	* frame.el (ns-display-name): Declare for compiler.

2008-07-17  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char-unidata-list): Initialize to the
	list of name, general-category, decomposition, and old-name.

2008-07-16  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* startup.el (command-line-1): Update processing of NS long options to
	mimic recent changes to processing of X long options.

2008-07-16  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-create-define-alist): Don't create a
	list of #defines for remote files.
	(gdb-source-info): Only show main if it has been found.

2008-07-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/ns-win.el: Require CL; fix up comment style; reindent.
	(ns-define-service): Use subst-char-in-string.  Avoid `eval'.
	(ns-save-preferences): Use `case'.
	(ns-initialize-window-system): Use `dolist'.

2008-07-16  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* loadup.el: Remove load of easy-mmode prior to ns-win when NS
	windowing is used.
	* term/ns-win.el (ns-extended-platform-support-mode):
	Correct/improve documentation.

2008-07-16  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/cl-compat.el, emacs-lisp/cl-macs.el, emacs-lisp/cl-seq.el:
	Simply require 'cl (see comment in cl-compat.el).
	* emacs-lisp/cl-macs.el (cl-compile-time-init): Remove function.